workloads/medium-place/radicale/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: radicale
  namespace: medium-place
  labels:
    app.kubernetes.io/name: radicale
    app.kubernetes.io/part-of: radicale
    app.kubernetes.io/version: 3.1.8

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: radicale
      app.kubernetes.io/part-of: radicale

  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
      labels:
        app.kubernetes.io/name: radicale
        app.kubernetes.io/part-of: radicale
        app.kubernetes.io/version: 3.1.8

    spec:
      containers:
        - name: radicale
          image: tomsquest/docker-radicale:3.1.8.0

          volumeMounts:
            - name: data
              mountPath: /data

          ports:
            - name: http
              protocol: TCP
              containerPort: 5232

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
