workloads/medium-place/radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: radicale
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: nutria.tail9b5a.ts.net
  labels:
    app.kubernetes.io/part-of: radicale

spec:
  ingressClassName: private

  tls:
    - hosts:
        - addressbook.medium.place
      secretName: addressbook.medium.place-tls

  rules:
    - host: addressbook.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: radicale
                port:
                  name: http
